--- a/server/composer.json
+++ b/server/composer.json
@@ -8,19 +8,23 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2.5",
+        "php": "^7.4",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
+        "knplabs/github-api": "^2.15",
         "laravel/framework": "^7.24",
-        "laravel/tinker": "^2.0"
+        "laravel/horizon": "^4.3",
+        "laravel/tinker": "^2.0",
+        "php-http/guzzle6-adapter": "^1.1"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
+        "phpunit/phpunit": "^8.5",
+        "umbrellio/code-style-php": "^1.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -58,6 +62,9 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "lint": [
+            "vendor/bin/ecs check app --fix --config=ecs.yml"
         ]
     }
 }
